Implement indicator, themes and types translations

--- a/client/dev/partials/_directives/form-edit-field.html
+++ b/client/dev/partials/_directives/form-edit-field.html
@@ -2,7 +2,7 @@
 	<a ng-click="remove()" class="remove-action" ng-if="field.indicatorId">
 		<i class="fa fa-times" style="color: red"></i>
 	</a>
-	{{indicator.name}}
+	{{indicator.name[language] || indicator.name}}
 </td>
 <td form-edit-field-summable type="geo" field="field" indicator="indicator"></td>
 <td form-edit-field-summable type="time" field="field" indicator="indicator"></td>
