--- a/client/dev/partials/indicators/reporting.html
+++ b/client/dev/partials/indicators/reporting.html
@@ -1,6 +1,6 @@
 <ol class="breadcrumb">
 	<li><a ui-sref="main.indicators" translate="shared.indicators"></a></li>
-	<li><a ui-sref="main.indicator.edit({indicatorId: indicator._id})" ng-bind="::indicator.name"></a></li>
+	<li><a ui-sref="main.indicator.edit({indicatorId: indicator._id})" ng-bind="indicator.name[language]"></a></li>
 	<li class="active" translate="shared.reporting"></li>
 </ol>
 
