--- a/client/dev/partials/admin/theme-type-list.html
+++ b/client/dev/partials/admin/theme-type-list.html
@@ -7,7 +7,8 @@
 <table class="table table-stripped table-bordered table-condensed">
 	<thead>
 		<tr>
-			<th translate="shared.name"></th>
+			<th ng-repeat="(code, language) in languages">{{('menu.'+language)|translate}}</th>
+
 			<th ng-if="entityType === 'theme'" translate="indicator.num_projects"></th>
 			<th translate="indicator.num_indicators"></th>
 			<th style="width:225px" acl-has-role="indicator"></th>
@@ -15,10 +16,10 @@
 	</thead>
 	<tbody>
 		<tr ng-repeat="(entityIndex, entity) in entities track by entity._id">
-			<td acl-has-role="indicator" acl-fallback="entity.name">
+			<td acl-has-role="indicator" acl-fallback="entity.name[code]" ng-repeat="(code, language) in languages">
 				<ng-form name="entityForm">
 					<div class="form-group" show-errors style="margin: 0">
-						<input type="text" name="name" ng-model="entity.name" class="form-control input-sm" required />
+						<input type="text" name="name" ng-model="entity.name[code]" class="form-control input-sm" required />
 					</div>
 				</ng-form>
 			</td>
@@ -36,7 +37,8 @@
 			</td>
 		</tr>
 		<tr acl-has-role="indicator">
-			<td colspan="{{entityType === 'theme' ? 4 : 3}}">
+			<!-- should be len(languages + 3) -->
+			<td colspan="{{entityType === 'theme' ? 6 : 5}}">
 				<div class="input-group input-group-sm" style="width: 100%">
 					<button class="btn btn-default btn-xs" ng-click="create()" style="width: 100%" translate>shared.add</button>
 				</div>
