--- a/client/dev/partials/indicators/edit.html
+++ b/client/dev/partials/indicators/edit.html
@@ -1,76 +1,80 @@
 <ol class="breadcrumb">
 	<li><a ui-sref="main.indicators" translate="shared.indicators"></a></li>
-	<li class="active">{{indicator.name}}</li>
+	<li class="active">{{indicator.name[language]}}</li>
 </ol>
 
 <form class="form-horizontal" role="form" name="indicatorForm" novalidate>
 	<fieldset>
 		<legend translate="indicator.definition"></legend>
 
-		<div class="form-group" show-errors>
-			<label for="input-name" class="col-sm-2 control-label" translate="shared.name"></label>
-			<div class="col-sm-10" acl-has-role="indicator" acl-fallback="indicator.name">
-				<input id="input-name"
-					   class="form-control"
-					   type="text"
-					   ng-model="indicator.name"
-					   name="name"
-					   placeholder="{{'indicator.name_ph'|translate}}"
-					   required />
+		<div class="col-sm-4" ng-repeat="(code, language) in languages">
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					<div class="panel-title" translate="{{'menu.' + language}}"></div>
+				</div>
 
-				<p class="help-block" ng-if="indicatorForm.name.$error.required" translate="form.mandatory"></p>
+				<div class="panel-body">
+					<div class="form-group" show-errors>
+						<label for="input-name-{{code}}" class="col-sm-2 control-label" translate="shared.name"></label>
+						<div class="col-sm-10" acl-has-role="indicator" acl-fallback="indicator.name">
+							<textarea id="input-name-{{code}}"
+									  class="form-control"
+									  type="text"
+									  ng-model="indicator.name[code]"
+									  name="name-{{code}}"
+									  placeholder="{{'indicator.name_ph'|translate}}"
+									  required></textarea>
+
+							<p class="help-block" ng-if="indicatorForm['name-' + code].$error.required" translate="form.mandatory"></p>
+						</div>
+					</div>
+
+					<div class="form-group" show-errors>
+						<label for="input-definition-{{code}}" class="col-sm-2 control-label" translate="indicator.definition"></label>
+						<div class="col-sm-10" acl-has-role="indicator" acl-fallback="indicator.definition">
+							<textarea id="input-definition-{{code}}"
+									  name="definition-{{code}}"
+									  class="form-control"
+									  ng-model="indicator.definition[code]"
+									  required
+									  placeholder="{{'indicator.definition_ph'|translate}}"></textarea>
+
+							<p class="help-block" ng-if="indicatorForm['definition-' + code].$error.required" translate="form.mandatory"></p>
+						</div>
+					</div>
+
+					<div class="form-group">
+						<label for="input-standard-{{code}}" class="col-sm-2 control-label" translate="indicator.standard"></label>
+						<div class="col-sm-10" acl-has-role="indicator" acl-fallback="indicator.standard">
+							<textarea id="input-standard-{{code}}"
+									  class="form-control"
+									  ng-model="indicator.standard[code]"
+									  placeholder="{{'indicator.standard_ph'|translate}}"></textarea>
+						</div>
+					</div>
+
+					<div class="form-group">
+						<label for="input-sources-{{code}}" class="col-sm-2 control-label" translate="indicator.sources"></label>
+						<div class="col-sm-10" acl-has-role="indicator" acl-fallback="indicator.sources">
+							<textarea id="input-sources-{{code}}"
+									  class="form-control"
+									  ng-model="indicator.sources[code]"
+									  placeholder="{{'indicator.sources_ph'|translate}}"></textarea>
+						</div>
+					</div>
+
+					<div class="form-group">
+						<label for="input-comments-{{code}}" class="col-sm-2 control-label" translate="indicator.comments"></label>
+						<div class="col-sm-10" acl-has-role="indicator" acl-fallback="indicator.comments">
+							<textarea id="input-comments-{{code}}"
+									  class="form-control"
+									  ng-model="indicator.comments[code]"
+									  placeholder="{{'indicator.comments_ph'|translate}}"></textarea>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
-
-		<div class="form-group" show-errors>
-			<label for="input-definition" class="col-sm-2 control-label" translate="indicator.definition"></label>
-			<div class="col-sm-10" acl-has-role="indicator" acl-fallback="indicator.definition">
-				<textarea id="input-definition"
-						  name="definition"
-						  class="form-control"
-						  ng-model="indicator.definition"
-						  required
-						  placeholder="{{'indicator.definition_ph'|translate}}"></textarea>
-
-				<p class="help-block" ng-if="indicatorForm.definition.$error.required" translate="form.mandatory"></p>
-			</div>
-		</div>
-
-		<div class="form-group" show-errors>
-			<label for="input-standard" class="col-sm-2 control-label" translate="indicator.standard"></label>
-			<div class="col-sm-10" acl-has-role="indicator" acl-fallback="indicator.standard">
-				<input type="text"
-					   id="input-standard"
-					   name="standard"
-					   class="form-control"
-					   ng-model="indicator.standard"
-					   placeholder="{{'indicator.standard_ph'|translate}}"></textarea>
-			</div>
-		</div>
-
-		<div class="form-group" show-errors>
-			<label for="input-sources" class="col-sm-2 control-label" translate="indicator.sources"></label>
-			<div class="col-sm-10" acl-has-role="indicator" acl-fallback="indicator.sources">
-				<input type="text"
-					   id="input-sources"
-					   name="sources"
-					   class="form-control"
-					   ng-model="indicator.sources"
-					   placeholder="{{'indicator.sources_ph'|translate}}"></textarea>
-			</div>
-		</div>
-
-		<div class="form-group" show-errors>
-			<label for="input-comments" class="col-sm-2 control-label" translate="indicator.comments"></label>
-			<div class="col-sm-10" acl-has-role="indicator" acl-fallback="indicator.comments">
-				<textarea id="input-comments"
-						  name="comments"
-						  class="form-control"
-						  ng-model="indicator.comments"
-						  placeholder="{{'indicator.comments_ph'|translate}}"></textarea>
-			</div>
-		</div>
-
 	</fieldset>
 
 	<fieldset>
@@ -80,11 +84,11 @@
 			<label for="input-themes" class="col-sm-2 control-label" translate="indicator.themes"></label>
 			<div class="col-sm-10">
 				<ui-select id="input-themes" multiple ng-model="indicator.themes" name="themes" theme="bootstrap" required acl-has-role="indicator">
-					<ui-select-match placeholder="{{'indicator.select_themes'|translate}}">{{$item.name}}</ui-select-match>
-					<ui-select-choices repeat="theme._id as theme in themes | filter: {name: $select.search}">{{theme.name}}</ui-select-choices>
+					<ui-select-match placeholder="{{'indicator.select_themes'|translate}}">{{$item.name[language]}}</ui-select-match>
+					<ui-select-choices repeat="theme._id as theme in themes">{{theme.name[language]}}</ui-select-choices>
 				</ui-select>
 
-				<p class="form-control-static" acl-lacks-role="indicator">{{indicator.themes | getObjects:themes | pluck:'name' | join:', '}}</p>
+				<p class="form-control-static" acl-lacks-role="indicator">{{indicator.themes|getObjects:themes|pluck:'name'|pluck:language|join:', '}}</p>
 			</div>
 		</div>
 
@@ -93,11 +97,11 @@
 
 			<div class="col-sm-10">
 				<ui-select id="input-types" multiple ng-model="indicator.types" name="types" theme="bootstrap" required acl-has-role="indicator">
-					<ui-select-match placeholder="{{'indicator.select_types'|translate}}">{{$item.name}}</ui-select-match>
-					<ui-select-choices repeat="type._id as type in types | filter: {name: $select.search}">{{type.name}}</ui-select-choices>
+					<ui-select-match placeholder="{{'indicator.select_types'|translate}}">{{$item.name[language]}}</ui-select-match>
+					<ui-select-choices repeat="type._id as type in types">{{type.name[language]}}</ui-select-choices>
 				</ui-select>
 
-				<p class="form-control-static" acl-lacks-role="indicator">{{indicator.types | getObjects:types | pluck:'name' | join:', '}}</p>
+				<p class="form-control-static" acl-lacks-role="indicator">{{indicator.types|getObjects:types|pluck:'name'|pluck:language|join:', '}}</p>
 			</div>
 		</div>
 
