--- a/client/dev/partials/projects/form-edit.html
+++ b/client/dev/partials/projects/form-edit.html
@@ -25,7 +25,7 @@
 				</div>
 			</div>
 
-			<div class="form-group" show-errors>
+			<div class="form-group">
 				<label for="active-input" class="col-sm-2 control-label" translate="shared.active"></label>
 				<div class="col-sm-10">
 					<p class="form-control-static" acl-has-project-role="owner" acl-fallback="form.active">
@@ -34,7 +34,7 @@
 				</div>
 			</div>
 
-			<div class="form-group" show-errors>
+			<div class="form-group">
 				<label for="periodicity-input" class="col-sm-2 control-label" translate="project.periodicity"></label>
 				<div class="col-sm-10" acl-has-project-role="owner" acl-fallback="('project.periodicities.'+form.periodicity)|translate">
 					<select class="form-control" name="periodicity" id="periodicity-input" ng-model="form.periodicity">
@@ -48,7 +48,7 @@
 				</div>
 			</div>
 
-			<div class="form-group" show-errors>
+			<div class="form-group">
 				<label for="collect-input" class="col-sm-2 control-label" translate="project.collect"></label>
 				<div class="col-sm-10" acl-has-project-role="owner" acl-fallback="('project.collects.'+form.collect)|translate">
 					<select class="form-control" name="collect" id="collect-input" ng-model="form.collect">
