Fix translation bugs

--- a/client/dev/partials/projects/logical-frame-indicator-edition.html
+++ b/client/dev/partials/projects/logical-frame-indicator-edition.html
@@ -5,7 +5,7 @@
 		<div class="form-group">
 			<label for="relevance-input" class="col-sm-2 control-label" translate="shared.indicator"></label>
 			<div class="col-sm-10">
-				<input type="text" ng-model="indicator.name" class="form-control" disabled />
+				<input type="text" ng-model="indicator.name[language]" class="form-control" disabled />
 			</div>
 		</div>
 
