Stop crashing on partial indicator list when forbidden indicators are declared. Fix icon translation bug.

--- a/client/dev/partials/indicators/edit.html
+++ b/client/dev/partials/indicators/edit.html
@@ -112,7 +112,7 @@
 					<option value="mandatory" translate="indicator.is_mandatory"></option>
 					<option value="recommended" translate="indicator.is_recommended"></option>
 					<option value="common" translate="indicator.is_common"></option>
-					<option value="parameter" translate="indicator.is_forbidden"></option>
+					<option value="forbidden" translate="indicator.is_forbidden"></option>
 				</select>
 			</div>
 		</div>
