--- a/client/dev/partials/indicators/selector-popup.html
+++ b/client/dev/partials/indicators/selector-popup.html
@@ -35,8 +35,8 @@
 				</span>
 
 				<i class="fa fa-ban fa-fw"
-					ng-if="indicator.operation == 'parameter'"
-					tooltip="{{'indicator.is_parameter'|translate}}"
+					ng-if="indicator.operation == 'forbidden'"
+					tooltip="{{'indicator.is_forbidden'|translate}}"
 					tooltip-placement="right"></i>
 
 				<i class="fa fa-question fa-fw"
