--- a/client/dev/partials/projects/menu.html
+++ b/client/dev/partials/projects/menu.html
@@ -55,7 +55,7 @@
 
 						<a ui-sref="main.project.input_list({projectId: project._id})" ui-sref-active="active" class="list-group-item">
 							<i class="fa fa-clock-o fa-fw"></i>
-							<span translate="project.waiting_inputs"></span>
+							<span translate="project.inputs"></span>
 						</a>
 
 						<a ui-sref="main.project.reporting({projectId: project._id})" ui-sref-active="active" class="list-group-item">
