Make indicators to be always deletable from logframe (they will just get removed from all forms that have a reference to it).

--- a/client/dev/partials/projects/logical-frame-indicator-edition.html
+++ b/client/dev/partials/projects/logical-frame-indicator-edition.html
@@ -144,7 +144,7 @@
 		<span translate="shared.detach"></span>
 	</button>
 
-	<button ng-click="delete()" class="btn btn-danger" ng-if="!isNew && isDeletable" acl-has-project-role="owner">
+	<button ng-click="delete()" class="btn btn-danger" ng-if="!isNew" acl-has-project-role="owner">
 		<i class="fa fa-remove"></i>
 		<span translate="shared.delete"></span>
 	</button>
