--- a/client/dev/partials/admin/menu.html
+++ b/client/dev/partials/admin/menu.html
@@ -3,20 +3,20 @@
 		<ul class="nav nav-pills nav-stacked">
 			<li ui-sref-active="active">
 				<a ui-sref="main.admin.users">
-					<i class="fa fa-book fa-fw"></i>
-					<span translate>shared.users</span>
+					<i class="fa fa-users fa-fw"></i>
+					<span translate="shared.users"></span>
 				</a>
 			</li>
 			<li ui-sref-active="active">
 				<a ui-sref="main.admin.theme_list">
 					<i class="fa fa-medkit fa-fw"></i>
-					<span translate>indicator.themes</span>
+					<span translate="indicator.themes"></span>
 				</a>
 			</li>
 			<li ui-sref-active="active">
 				<a ui-sref="main.admin.type_list">
 					<i class="fa fa-filter fa-fw"></i>
-					<span translate>indicator.types</span>
+					<span translate="indicator.types"></span>
 				</a>
 			</li>
 		</ul>
