--- a/client/dev/partials/admin/theme-type-list.html
+++ b/client/dev/partials/admin/theme-type-list.html
@@ -4,6 +4,8 @@
 	<li class="active" translate ng-if="entityType === 'type'">indicator.types_list</li>
 </ol>
 
+<doc-reminder pages="general.translation"></doc-reminder>
+
 <table class="table table-stripped table-bordered table-condensed">
 	<thead>
 		<tr>
