--- a/client/dev/partials/indicators/edit.html
+++ b/client/dev/partials/indicators/edit.html
@@ -3,6 +3,8 @@
 	<li class="active">{{indicator.name[language]}}</li>
 </ol>
 
+<doc-reminder pages="general.translation,indicators.presentation_indicator,indicators.completeness,indicators.operation_modes,indicators.computation"></doc-reminder>
+
 <form class="form-horizontal" role="form" name="indicatorForm" novalidate>
 	<fieldset>
 		<legend translate="indicator.definition"></legend>
