--- a/client/dev/partials/indicators/list.html
+++ b/client/dev/partials/indicators/list.html
@@ -1,7 +1,4 @@
-<ol class="breadcrumb">
-	<li class="active" translate="shared.indicators"></li>
-	<li class="active" translate="shared.list"></li>
-</ol>
+<doc-reminder pages="indicators.presentation_indicator"></doc-reminder>
 
 <div class="form-horizontal">
 	<div class="form-group">
