--- a/client/dev/partials/projects/input.html
+++ b/client/dev/partials/projects/input.html
@@ -7,6 +7,8 @@
 	<li class="active" ng-bind="currentInput.period|amDateFormat:'YYYY-MM-DD'"></li>
 </ol>
 
+<doc-reminder pages="project.presentation_project,project.inputs"></doc-reminder>
+
 <tabset>
 	<tab heading="{{'project.raw_data'|translate}}">
 		<br/>
