--- a/client/dev/partials/projects/list.html
+++ b/client/dev/partials/projects/list.html
@@ -1,7 +1,5 @@
-<ol class="breadcrumb">
-	<li class="active" translate="shared.projects"></li>
-	<li class="active" translate="shared.list"></li>
-</ol>
+
+<doc-reminder pages="project.presentation_project"></doc-reminder>
 
 <ul class="nav nav-tabs" role="tablist">
 	<li ng-class="{active:projects==runningProjects}">
