--- a/client/dev/partials/projects/logical-frame.html
+++ b/client/dev/partials/projects/logical-frame.html
@@ -7,6 +7,8 @@
 	<li class="active" translate="shared.logical_frame"></li>
 </ol>
 
+<doc-reminder pages="project.presentation_project,project.logical_frame,project.change_definition"></doc-reminder>
+
 <form class="form-horizontal noprint" role="form" name="projectForm" novalidate>
 	<fieldset>
 		<legend translate="project.general_data"></legend>
