--- a/client/dev/partials/projects/user-list.html
+++ b/client/dev/partials/projects/user-list.html
@@ -4,6 +4,8 @@
 	<li class="active" translate="project.users"></li>
 </ol>
 
+<doc-reminder pages="project.presentation_project,project.users"></doc-reminder>
+
 <form class="form-horizontal" role="form" name="usersForm" novalidate>
 
 	<div class="form-group">
