--- a/client/dev/partials/indicators/reporting.html
+++ b/client/dev/partials/indicators/reporting.html
@@ -4,6 +4,8 @@
 	<li class="active" translate="shared.reporting"></li>
 </ol>
 
+<doc-reminder pages="indicators.collection_history"></doc-reminder>
+
 <form class="form-horizontal noprint" novalidate>
 	<div class="row">
 		<div class="col-md-6">
