--- a/client/dev/partials/projects/form-edit.html
+++ b/client/dev/partials/projects/form-edit.html
@@ -5,6 +5,8 @@
 	<li class="active">{{form.name}}</li>
 </ol>
 
+<doc-reminder pages="project.presentation_project,project.input_forms,project.change_definition"></doc-reminder>
+
 <form class="form-horizontal" role="form" name="formForm" novalidate>
 	<tabset>
 		<tab heading="{{'project.planning'|translate}}">
