--- a/client/dev/partials/projects/form-list.html
+++ b/client/dev/partials/projects/form-list.html
@@ -4,6 +4,8 @@
 	<li class="active" translate>project.input_forms</li>
 </ol>
 
+<doc-reminder pages="project.presentation_project,project.input_forms,project.change_definition"></doc-reminder>
+
 <h4 translate="project.input_form_list"></h4>
 <table class="table table-bordered table-stripped table-condensed">
 	<thead>
