--- a/client/dev/partials/projects/input-list.html
+++ b/client/dev/partials/projects/input-list.html
@@ -4,9 +4,7 @@
 	<li class="active" translate="project.waiting_inputs"></li>
 </ol>
 
-<!-- <input type="checkbox" id="see-all-input" ng-model="showFinished" />
-<label for="see-all-input" translate="project.see_all_inputs"></label>
- -->
+<doc-reminder pages="project.presentation_project,project.inputs"></doc-reminder>
 
 <ul class="nav nav-tabs" role="tablist">
 	<li ng-class="{active:inputs==waitingInputs}">
