--- a/client/dev/partials/projects/menu.html
+++ b/client/dev/partials/projects/menu.html
@@ -25,7 +25,7 @@
 						</a>
 
 						<a ui-sref="main.project.forms({projectId: project._id})" ng-class="{active: $state.is('main.project.forms') || $state.is('main.project.form')}" class="list-group-item">
-							<i class="fa fa-file-text-o fa-fw"></i>
+							<i class="fa fa-clock-o fa-fw"></i>
 							<span translate="project.input_forms"></span>
 						</a>
 
@@ -39,7 +39,7 @@
 						<a class="list-group-item active"><i class="fa fa-building-o fa-fw"></i> <span translate="shared.logical_frame"></span></a>
 						<a class="list-group-item"><i class="fa fa-map-marker fa-fw"></i> <span translate="shared.input_entities"></span></a>
 						<a class="list-group-item"><i class="fa fa-map-marker fa-fw"></i> <span translate="shared.input_groups"></span></a>
-						<a class="list-group-item"><i class="fa fa-file-text-o fa-fw"></i> <span translate="project.input_forms"></span></a>
+						<a class="list-group-item"><i class="fa fa-clock-o fa-fw"></i> <span translate="project.input_forms"></span></a>
 						<a class="list-group-item"><i class="fa fa-users fa-fw"></i> <span translate="project.users"></span></a>
 					</div>
 				</div>
@@ -53,8 +53,8 @@
 				<div class="panel-collapse">
 					<div class="list-group" ng-if="project._id">
 
-						<a ui-sref="main.project.input_list({projectId: project._id})" ui-sref-active="active" class="list-group-item">
-							<i class="fa fa-clock-o fa-fw"></i>
+						<a ui-sref="main.project.input_list({projectId: project._id})" class="list-group-item" ng-class="{active: $state.is('main.project.input_list') || $state.is('main.project.input')}">
+							<i class="fa fa-pencil fa-fw"></i>
 							<span translate="project.inputs"></span>
 						</a>
 
@@ -70,7 +70,7 @@
 					</div>
 
 					<div class="list-group" ng-if="!project._id">
-						<a class="list-group-item"><i class="fa fa-clock-o fa-fw"></i> <span translate="project.waiting_inputs"></span></a>
+						<a class="list-group-item"><i class="fa fa-pencil fa-fw"></i> <span translate="project.inputs"></span></a>
 						<a class="list-group-item"><i class="fa fa-line-chart fa-fw"></i> <span translate="shared.reporting"></span></a>
 						<a class="list-group-item"><i class="fa fa-lightbulb-o fa-fw"></i> <span translate="shared.reporting_analysis"></span></a>
 					</div>
