--- a/client/dev/partials/projects/reporting-analysis-list.html
+++ b/client/dev/partials/projects/reporting-analysis-list.html
@@ -4,6 +4,8 @@
 	<li class="active" translate="shared.reporting_analysis"></li>
 </ol>
 
+<doc-reminder pages="project.presentation_project,project.statistics,project.descriptive_analysis"></doc-reminder>
+
 <table class="table table-bordered table-stripped table-condensed">
 	<thead>
 		<tr>
