--- a/client/dev/partials/projects/reporting-analysis.html
+++ b/client/dev/partials/projects/reporting-analysis.html
@@ -6,6 +6,8 @@
 	<li class="active" ng-bind="report.name"></li>
 </ol>
 
+<doc-reminder pages="project.presentation_project,project.statistics,project.descriptive_analysis"></doc-reminder>
+
 <form class="form-horizontal" role="form" name="reportForm" novalidate>
 
 	<div class="form-group" show-errors>
