--- a/client/dev/partials/projects/reporting.html
+++ b/client/dev/partials/projects/reporting.html
@@ -8,6 +8,8 @@
 	<li class="active" ng-if="entity" ng-bind="entity.name"></li>
 </ol>
 
+<doc-reminder pages="project.presentation_project,project.statistics"></doc-reminder>
+
 <reporting-query query="query"></reporting-query>
 
 <form class="form-horizontal noprint" novalidate>
