Rename diagrams so that gulp gets them when merging the templates.

--- a/client/dev/partials/help/project/input_forms.html
+++ b/client/dev/partials/help/project/input_forms.html
@@ -28,7 +28,7 @@
 			<li>La liste des indicateurs du cadre logiques sont gérés par ce planning, et leur expression en fonction de formules déclarés dans l’indicateur et des variables des données brutes.</li>
 		</ul>
 
-		<div ng-include="'partials/help/project/planning.svg'" style="width: 800px; display: block; margin: auto"></div>
+		<div ng-include="'partials/help/project/input_forms_diagram.html'" style="width: 800px; display: block; margin: auto"></div>
 
 		<h4>Répartition des indicateurs par planning de saisie</h4>
 
