--- a/client/dev/partials/help/project/presentation_project.html
+++ b/client/dev/partials/help/project/presentation_project.html
@@ -9,7 +9,7 @@
 
 		<p>Le Monitool a pour objectif de permettre le suivi quantitatif des résultats et de l’impact sur le terrain des projets. Il ne prend donc en compte aucune considération de planning, de budget, de logistique ou de stock, de ressources humaines : ceux-ci sont hors du périmètre du projet et sont déjà traités dans d’autres outils.</p>
 
-		<div ng-include="'partials/help/project/project.svg'" style="width: 500px; display: block; margin: auto"></div>
+		<div ng-include="'partials/help/project/presentation_project_diagram.html'" style="width: 500px; display: block; margin: auto"></div>
 
 		<p>On peut considérer que les projets sont donc entièrement caractérisés par</p>
 		<ul>
