--- a/client/dev/partials/projects/list.html
+++ b/client/dev/partials/projects/list.html
@@ -28,21 +28,13 @@
 		</tr>
 		<tr ng-repeat="project in projects|orderBy:pred:rev">
 			<td style="text-align: center">
-				<i class="fa fa-file-powerpoint-o"
+				<i class="fa fa-building-o fa-fw"
 				   tooltip="{{'project.you_are_owner'|translate}}"
 				   tooltip-placement="right" acl-has-project-role="owner" acl-project="project"></i>
 
-				<i class="fa fa-file-powerpoint-o text-danger"
-				   tooltip="{{'project.you_are_not_owner'|translate}}"
-				   tooltip-placement="right" acl-lacks-project-role="owner" acl-project="project"></i>
-
-				<i class="fa fa-file-text-o"
+				<i class="fa fa-pencil fa-fw"
 				   tooltip="{{'project.you_are_editor'|translate}}"
 				   tooltip-placement="right" acl-has-project-role="input" acl-project="project"></i>
-
-				<i class="fa fa-file-text-o text-danger"
-				   tooltip="{{'project.you_are_not_editor'|translate}}"
-				   tooltip-placement="right" acl-lacks-project-role="input" acl-project="project"></i>
 			</td>
 			<td><a ui-sref="main.project.logical_frame({projectId: project._id})">{{project.name}}</a></td>
 			<td>{{project.themes|getObjects:themes|pluck:'name'|pluck:language|join:', '}}</td>
